featI15: Implementation of study material tests