@@ -1,6 +1,7 @@
 package com.github.guilhermebauer.studymanagement.service;
 
 import com.github.guilhermebauer.studymanagement.exception.StudyMaterialNotFoundException;
+import com.github.guilhermebauer.studymanagement.exception.UserNotFoundException;
 import com.github.guilhermebauer.studymanagement.model.CourseEntity;
 import com.github.guilhermebauer.studymanagement.model.LinkEntity;
 import com.github.guilhermebauer.studymanagement.model.RoleEntity;
@@ -9,9 +10,11 @@ import com.github.guilhermebauer.studymanagement.model.UserEntity;
 import com.github.guilhermebauer.studymanagement.model.values.LinkVO;
 import com.github.guilhermebauer.studymanagement.model.values.StudyMaterialVO;
 import com.github.guilhermebauer.studymanagement.repository.StudyMaterialRepository;
+import com.github.guilhermebauer.studymanagement.repository.UserRepository;
 import com.github.guilhermebauer.studymanagement.request.LinkListToStudyMaterialRequest;
 import com.github.guilhermebauer.studymanagement.request.SingleLinkToStudyMaterialRequest;
 import com.github.guilhermebauer.studymanagement.request.StudyMaterialUpdateRequest;
+import com.github.guilhermebauer.studymanagement.response.StudyMaterialResponse;
 import com.github.guilhermebauer.studymanagement.response.StudyMaterialUpdateResponse;
 import com.github.guilhermebauer.studymanagement.utils.ValidatorUtils;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,6 +29,10 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.HashSet;
 import java.util.List;
@@ -48,6 +55,18 @@ class StudyMaterialTest {
 
     @Mock
     private StudyMaterialRepository repository;
+
+    @Mock
+    private UserRepository userRepository;
+
+    @Mock
+    private SecurityContext securityContext;
+
+    @Mock
+    private Authentication authentication;
+
+    @Mock
+    private UserDetails userDetails;
 
     @Mock
     private StudyMaterialVO studyMaterialVO;
@@ -79,7 +98,10 @@ class StudyMaterialTest {
     @Mock
     private LinkService linkService;
 
+    private UserEntity userEntity;
+
     private static final String STUDY_MATERIAL_NOT_FOUND = "The study material was not found";
+    private static final String USER_NOT_FOUND_MESSAGE = "That User was not found";
 
 
     private static final String INVALID_ID = "5f68880";
@@ -87,9 +109,11 @@ class StudyMaterialTest {
     private static final String URL = "https://start.spring.io/";
     private static final String DESCRIPTION = "Spring Boot Tutorial";
     private static final String TITLE = "Introduction to Spring Boot";
+    private static final String UPDATED_CONTENT = "A Spring Boot guide";
+    private static final String UPDATED_TITLE = "Spring Boot introduction";
     private static final String CONTENT = "This is a comprehensive guide to Spring Boot.";
-    private final String COURSE_TITLE = "Math";
-    private final String COURSE_DESCRIPTION = "Math is a discipline that work with numbers";
+    private static final String COURSE_TITLE = "Math";
+    private static final String COURSE_DESCRIPTION = "Math is a discipline that work with numbers";
 
     private static final String USER_NAME = "john";
     private static final String EMAIL = "jonhDoe@gmail.com";
@@ -100,25 +124,27 @@ class StudyMaterialTest {
 
     @BeforeEach
     void setUp() {
-        UserEntity userEntity = new UserEntity(ID, USER_NAME, EMAIL, PASSWORD, ROLES);
+        userEntity = new UserEntity(ID, USER_NAME, EMAIL, PASSWORD, ROLES);
         linkVO = new LinkVO(ID, URL, DESCRIPTION);
         linkEntity = new LinkEntity(ID, URL, DESCRIPTION);
-        courseEntity = new CourseEntity(ID, COURSE_TITLE, COURSE_DESCRIPTION,userEntity);
-        studyMaterialVO = new StudyMaterialVO(ID, TITLE, CONTENT, courseEntity, List.of(linkEntity));
-        studyMaterialEntity = new StudyMaterialEntity(ID, TITLE, CONTENT, courseEntity, List.of(linkEntity));
+        courseEntity = new CourseEntity(ID, COURSE_TITLE, COURSE_DESCRIPTION, userEntity);
+        studyMaterialVO = new StudyMaterialVO(ID, TITLE, CONTENT, courseEntity, List.of(linkEntity), userEntity);
+        studyMaterialEntity = new StudyMaterialEntity(ID, TITLE, CONTENT, courseEntity, List.of(linkEntity), userEntity);
         singleLinkToStudyMaterialRequest = new SingleLinkToStudyMaterialRequest(ID, linkVO);
         linkListToStudyMaterialRequest = new LinkListToStudyMaterialRequest(ID, List.of(linkEntity));
         studyMaterialUpdateRequest = new StudyMaterialUpdateRequest(ID, TITLE, CONTENT);
 
+        SecurityContextHolder.setContext(securityContext);
+
     }
 
     @Test
-    void testCreateStudyMaterial_WhenCreateStudyMaterial_ShouldReturnStudyMaterialObject()  {
+    void testCreateStudyMaterial_WhenCreateStudyMaterial_ShouldReturnStudyMaterialObject() {
 
         try (MockedStatic<ValidatorUtils> mockedValidatorUtils = Mockito.mockStatic(ValidatorUtils.class)) {
 
             List<LinkEntity> linkEntities = List.of(linkEntity);
-            mockedValidatorUtils.when(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any(Class.class)))
+            mockedValidatorUtils.when(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any()))
                     .thenAnswer(invocation -> null);
 
             mockedValidatorUtils.when(() -> ValidatorUtils.updateFieldIfNotNull(any(StudyMaterialEntity.class),
@@ -129,48 +155,55 @@ class StudyMaterialTest {
                     .thenAnswer(invocation -> null);
 
             when(linkService.create(linkEntities)).thenReturn(linkEntities);
+            when(userRepository.findUserByEmail(anyString())).thenReturn(Optional.of(userEntity));
             when(repository.save(any(StudyMaterialEntity.class))).thenReturn(studyMaterialEntity);
+            when(securityContext.getAuthentication()).thenReturn(authentication);
+            when(authentication.getPrincipal()).thenReturn(userDetails);
+            when(userDetails.getUsername()).thenReturn(EMAIL);
 
-            StudyMaterialVO createdStudyMaterial = service.create(studyMaterialVO);
+            StudyMaterialResponse createdStudyMaterial = service.create(studyMaterialVO);
 
             verify(repository, times(1)).save(any(StudyMaterialEntity.class));
             verify(linkService, times(1)).create(anyList());
 
-            mockedValidatorUtils.verify(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any(Class.class)));
+            mockedValidatorUtils.verify(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any()));
             mockedValidatorUtils.verify(() -> ValidatorUtils.checkFieldNotNullAndNotEmptyOrThrowException(any(), anyString(), any()));
 
             assertNotNull(createdStudyMaterial);
             assertNotNull(createdStudyMaterial.getId());
             assertEquals(CONTENT, createdStudyMaterial.getContent());
             assertEquals(TITLE, createdStudyMaterial.getTitle());
-            assertEquals(COURSE_TITLE, createdStudyMaterial.getCourseEntity().getTitle());
-            assertEquals(COURSE_DESCRIPTION, createdStudyMaterial.getCourseEntity().getDescription());
+            assertEquals(COURSE_TITLE, createdStudyMaterial.getCourseResponse().getTitle());
+            assertEquals(COURSE_DESCRIPTION, createdStudyMaterial.getCourseResponse().getDescription());
 
         }
     }
 
     @Test
     void testCreateStudyMaterial_WhenStudyMaterialIsNull_ShouldThrowStudyMaterialNotFoundException() {
-
-        StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
+        UserNotFoundException exception = assertThrows(UserNotFoundException.class, () ->
                 service.create(null));
 
         assertNotNull(exception);
-        assertEquals(StudyMaterialNotFoundException.ERROR.formatErrorMessage(STUDY_MATERIAL_NOT_FOUND)
+        assertEquals(UserNotFoundException.ERROR.formatErrorMessage(USER_NOT_FOUND_MESSAGE)
                 , exception.getMessage());
 
 
     }
 
 
+
     @Test
-    void testUpdateStudyMaterial_WhenUpdatedStudyMaterial_ShouldReturnStudyMaterialObject()  {
+    void testUpdateStudyMaterial_WhenUpdatedStudyMaterial_ShouldReturnStudyMaterialObject() {
         try (MockedStatic<ValidatorUtils> mockedValidatorUtils = Mockito.mockStatic(ValidatorUtils.class)) {
 
-            studyMaterialEntity.setContent("A Spring Boot guide");
-            studyMaterialEntity.setTitle("Spring Boot introduction");
+            studyMaterialEntity.setContent(UPDATED_CONTENT);
+            studyMaterialEntity.setTitle(UPDATED_TITLE);
 
-            mockedValidatorUtils.when(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any(Class.class)))
+            mockedValidatorUtils.when(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any()))
                     .thenAnswer(invocation -> null);
 
             mockedValidatorUtils.when(() -> ValidatorUtils.updateFieldIfNotNull(any(StudyMaterialEntity.class),
@@ -180,29 +213,34 @@ class StudyMaterialTest {
             mockedValidatorUtils.when(() -> ValidatorUtils.checkFieldNotNullAndNotEmptyOrThrowException(any(), anyString(), any()))
                     .thenAnswer(invocation -> null);
 
-            when(repository.findById(anyString())).thenReturn(Optional.of(studyMaterialEntity));
+            when(repository.findByIdAndUserEmail(anyString(), anyString())).thenReturn(Optional.of(studyMaterialEntity));
             when(repository.save(any(StudyMaterialEntity.class))).thenReturn(studyMaterialEntity);
+            when(securityContext.getAuthentication()).thenReturn(authentication);
+            when(authentication.getPrincipal()).thenReturn(userDetails);
+            when(userDetails.getUsername()).thenReturn(EMAIL);
 
             StudyMaterialUpdateResponse update = service.update(studyMaterialUpdateRequest);
 
             verify(repository, times(1)).save(any());
-            verify(repository, times(1)).findById(anyString());
+            verify(repository, times(1)).findByIdAndUserEmail(anyString(), anyString());
 
-            mockedValidatorUtils.verify(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any(Class.class)));
+            mockedValidatorUtils.verify(() -> ValidatorUtils.checkObjectIsNullOrThrowException(any(), anyString(), any()));
             mockedValidatorUtils.verify(() -> ValidatorUtils.updateFieldIfNotNull(any(), any(), anyString(), any()));
             mockedValidatorUtils.verify(() -> ValidatorUtils.checkFieldNotNullAndNotEmptyOrThrowException(any(), anyString(), any()));
 
             assertNotNull(update);
             assertNotNull(update.getId());
-            assertEquals("A Spring Boot guide", update.getContent());
-            assertEquals("Spring Boot introduction", update.getTitle());
+            assertEquals(UPDATED_CONTENT, update.getContent());
+            assertEquals(UPDATED_TITLE, update.getTitle());
 
         }
     }
 
     @Test
     void testUpdateStudyMaterial_WhenStudyMaterialIdIsNotInsertIntoDatabase_ShouldThrowStudyMaterialNotFoundException() {
-
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
         StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
                 service.update(studyMaterialUpdateRequest));
 
@@ -214,28 +252,33 @@ class StudyMaterialTest {
     }
 
     @Test
-    void testFindStudyMaterial_WhenFindStudyMaterialById_ShouldReturnStudyMaterialObject()  {
+    void testFindStudyMaterial_WhenFindStudyMaterialById_ShouldReturnStudyMaterialObject() {
 
 
-        when(repository.findById(anyString())).thenReturn(Optional.of(studyMaterialEntity));
+        when(repository.findByIdAndUserEmail(anyString(),anyString())).thenReturn(Optional.of(studyMaterialEntity));
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
 
-        StudyMaterialVO studyMaterialByID = service.findByID(ID);
+        StudyMaterialResponse studyMaterialByID = service.findByID(ID);
 
-        verify(repository, times(1)).findById(anyString());
+        verify(repository, times(1)).findByIdAndUserEmail(anyString(),anyString());
 
         assertNotNull(studyMaterialByID);
         assertNotNull(studyMaterialByID.getId());
         assertEquals(CONTENT, studyMaterialByID.getContent());
         assertEquals(TITLE, studyMaterialByID.getTitle());
-        assertEquals(COURSE_TITLE, studyMaterialByID.getCourseEntity().getTitle());
-        assertEquals(COURSE_DESCRIPTION, studyMaterialByID.getCourseEntity().getDescription());
+        assertEquals(COURSE_TITLE, studyMaterialByID.getCourseResponse().getTitle());
+        assertEquals(COURSE_DESCRIPTION, studyMaterialByID.getCourseResponse().getDescription());
 
 
     }
 
     @Test
     void testFindStudyMaterialById_WhenStudyMaterialIsNotInsertIntoDatabase_ShouldThrowStudyMaterialNotFoundException() {
-
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
         StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
                 service.findByID(ID));
 
@@ -247,34 +290,40 @@ class StudyMaterialTest {
     }
 
     @Test
-    void testStudyMaterial_When_FindAll_ShouldReturnStudyMaterialList()  {
+    void testStudyMaterial_When_FindAll_ShouldReturnStudyMaterialList() {
 
         List<StudyMaterialEntity> studyMaterialEntities = List.of(studyMaterialEntity);
 
-        when(repository.findAll(any(Pageable.class))).thenReturn(new PageImpl<>(studyMaterialEntities));
+        when(repository.findAllByUserEmail(anyString(), any(Pageable.class))).thenReturn(new PageImpl<>(studyMaterialEntities));
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
         PageRequest pageRequest = PageRequest.of(0, 10);
-        Page<StudyMaterialVO> foundedListOfStudyMaterialVO = service.findAll(pageRequest);
+        Page<StudyMaterialResponse> foundedListOfStudyMaterialVO = service.findAll(pageRequest);
 
-        verify(repository, times(1)).findAll(any(Pageable.class));
+        verify(repository, times(1)).findAllByUserEmail(anyString(), any(Pageable.class));
 
-        StudyMaterialVO foundedStudyMaterialVO = foundedListOfStudyMaterialVO.getContent().getFirst();
+        StudyMaterialResponse foundedStudyMaterialResponse = foundedListOfStudyMaterialVO.getContent().getFirst();
 
         assertEquals(1, foundedListOfStudyMaterialVO.getTotalElements());
 
-        assertNotNull(foundedStudyMaterialVO);
-        assertNotNull(foundedStudyMaterialVO.getCourseEntity());
+        assertNotNull(foundedStudyMaterialResponse);
+        assertNotNull(foundedStudyMaterialResponse.getCourseResponse());
 
-        assertEquals(CONTENT, foundedStudyMaterialVO.getContent());
-        assertEquals(TITLE, foundedStudyMaterialVO.getTitle());
-        assertEquals(COURSE_TITLE, foundedStudyMaterialVO.getCourseEntity().getTitle());
-        assertEquals(COURSE_DESCRIPTION, foundedStudyMaterialVO.getCourseEntity().getDescription());
+        assertEquals(CONTENT, foundedStudyMaterialResponse.getContent());
+        assertEquals(TITLE, foundedStudyMaterialResponse.getTitle());
+        assertEquals(COURSE_TITLE, foundedStudyMaterialResponse.getCourseResponse().getTitle());
+        assertEquals(COURSE_DESCRIPTION, foundedStudyMaterialResponse.getCourseResponse().getDescription());
 
     }
 
     @Test
     void testDelete_WhenDeletingStudyMaterial_thenDoNothing() {
 
-        when(repository.findById(ID)).thenReturn(Optional.of(studyMaterialEntity));
+        when(repository.findByIdAndUserEmail(ID, EMAIL)).thenReturn(Optional.of(studyMaterialEntity));
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
         doNothing().when(repository).delete(studyMaterialEntity);
         service.delete(ID);
         verify(repository, times(1)).delete(any(StudyMaterialEntity.class));
@@ -283,7 +332,9 @@ class StudyMaterialTest {
 
     @Test
     void testDelete_WhenStudyMaterialIdNotFoundIntoDatabase_ShouldThrowStudyMaterialNotFoundException() {
-
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        when(authentication.getPrincipal()).thenReturn(userDetails);
+        when(userDetails.getUsername()).thenReturn(EMAIL);
         StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
                 service.delete(ID));
 
@@ -293,7 +344,7 @@ class StudyMaterialTest {
     }
 
     @Test
-    void testAddLinkInStudyMaterial_WhenCreateStudyMaterial_ShouldReturnStudyMaterialObject()  {
+    void testAddLinkInStudyMaterial_WhenCreateStudyMaterial_ShouldReturnStudyMaterialObject() {
 
         List<LinkEntity> linkEntities = List.of(linkEntity);
 
@@ -301,7 +352,7 @@ class StudyMaterialTest {
         when(linkService.create(linkEntities)).thenReturn(linkEntities);
         when(repository.save(any(StudyMaterialEntity.class))).thenReturn(studyMaterialEntity);
 
-        StudyMaterialVO addLinksToStudyMaterial = service.addLinkInStudyMaterial(linkListToStudyMaterialRequest);
+        StudyMaterialResponse addLinksToStudyMaterial = service.addLinkInStudyMaterial(linkListToStudyMaterialRequest);
 
         verify(repository, times(1)).save(any());
         verify(repository, times(1)).findById(anyString());
@@ -317,7 +368,6 @@ class StudyMaterialTest {
 
     @Test
     void testAddLinkInStudyMaterial_WhenStudyMaterialIdNotFoundIntoDatabase_ShouldThrowStudyMaterialNotFoundException() {
-
         StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
                 service.addLinkInStudyMaterial(linkListToStudyMaterialRequest));
 
@@ -327,13 +377,13 @@ class StudyMaterialTest {
     }
 
     @Test
-    void testUpdateLinkInStudyMaterial_WhenUpdatedStudyMaterial_ShouldReturnStudyMaterialObject()  {
+    void testUpdateLinkInStudyMaterial_WhenUpdatedStudyMaterial_ShouldReturnStudyMaterialObject() {
 
 
         when(repository.findById(anyString())).thenReturn(Optional.of(studyMaterialEntity));
         when(repository.save(any(StudyMaterialEntity.class))).thenReturn(studyMaterialEntity);
 
-        StudyMaterialVO updateLinksToStudyMaterial = service.updateLinkInStudyMaterial(singleLinkToStudyMaterialRequest);
+        StudyMaterialResponse updateLinksToStudyMaterial = service.updateLinkInStudyMaterial(singleLinkToStudyMaterialRequest);
 
         verify(repository, times(1)).save(any());
         verify(repository, times(1)).findById(anyString());
@@ -349,7 +399,6 @@ class StudyMaterialTest {
 
     @Test
     void testUpdateLinkInStudyMaterial_WhenStudyMaterialIdNotFoundIntoDatabase_ShouldThrowStudyMaterialNotFoundException() {
-
         StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
                 service.updateLinkInStudyMaterial(singleLinkToStudyMaterialRequest));
 
@@ -379,15 +428,14 @@ class StudyMaterialTest {
         singleLinkToStudyMaterialRequest.getLink().setId(INVALID_ID);
         service.updateLinkInStudyMaterial(singleLinkToStudyMaterialRequest);
 
-        verify(repository,times(1)).findById(anyString());
-        verify(repository,times(1)).save(any());
+        verify(repository, times(1)).findById(anyString());
+        verify(repository, times(1)).save(any());
 
 
     }
 
     @Test
     void testDeleteLinkInStudyMaterial_WhenStudyMaterialIdNotFoundIntoDatabase_ShouldThrowStudyMaterialNotFoundException() {
-
         StudyMaterialNotFoundException exception = assertThrows(StudyMaterialNotFoundException.class, () ->
                 service.deleteLinkInStudyMaterial(singleLinkToStudyMaterialRequest));
 
@@ -403,11 +451,12 @@ class StudyMaterialTest {
         singleLinkToStudyMaterialRequest.getLink().setId(INVALID_ID);
         singleLinkToStudyMaterialRequest.setId(INVALID_ID);
         service.deleteLinkInStudyMaterial(singleLinkToStudyMaterialRequest);
+        verify(repository, times(1)).findById(anyString());
         assertEquals(1, studyMaterialEntity.getLinks().size());
     }
 
     @Test
-    void testFindAlLLinkInStudyMaterial_WhenFinalAlLStudyMaterial_ShouldReturnStudyMaterialObject()  {
+    void testFindAlLLinkInStudyMaterial_WhenFinalAlLStudyMaterial_ShouldReturnStudyMaterialObject() {
 
         List<LinkEntity> linkEntities = List.of(linkEntity);
         Page<LinkEntity> pageLinks = new PageImpl<>(linkEntities);
@@ -420,14 +469,13 @@ class StudyMaterialTest {
 
         assertNotNull(result);
         assertEquals(1, result.getTotalElements());
-        assertEquals(URL, result.getContent().get(0).getUrl());
-        assertEquals(DESCRIPTION, result.getContent().get(0).getDescription());
+        assertEquals(URL, result.getContent().getFirst().getUrl());
+        assertEquals(DESCRIPTION, result.getContent().getFirst().getDescription());
 
         verify(repository, times(1)).findLinksByStudyMaterialId(ID, pageable);
 
 
     }
-
 
 
 }
